@startuml FreightCargoSystem

title Freight Cargo Inventory and Shipment Management System

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classHeaderBackgroundColor #D6EAF8
skinparam classBorderColor #2E86C1
skinparam ArrowColor #1A5276
skinparam NoteBackgroundColor #FEF9E7
skinparam NoteBorderColor #D4AC0D
skinparam Shadowing false
skinparam Linetype ortho

' ─────────────────────────────────────────────
' USER HIERARCHY
' ─────────────────────────────────────────────

class User {
  + user_id : BIGSERIAL <<PK>>
  + name : TEXT
  + email : TEXT <<UNIQUE>>
  + password : TEXT
  + role_id : INTEGER
}

class Admin {
  + user_id : BIGINT <<PK, FK>>
  + admin_level : INTEGER
}

class WarehouseStaff {
  + user_id : BIGINT <<PK, FK>>
  + job_title : TEXT
  + shift : TEXT
}

User <|-- Admin : <<disjoint inheritance>>
User <|-- WarehouseStaff : <<disjoint inheritance>>

' ─────────────────────────────────────────────
' LOCATION & WAREHOUSE
' ─────────────────────────────────────────────

class Location {
  + location_id : BIGSERIAL <<PK>>
  + location_name : TEXT
  + location_type : TEXT
}

class Warehouse {
  + warehouse_id : BIGSERIAL <<PK>>
  + name : TEXT
  + address : TEXT
  + capacity : INTEGER
  + location_id : BIGINT <<FK>>
}

class Manages {
  + admin_user_id : BIGINT <<PK, FK>>
  + warehouse_id : BIGINT <<PK, FK>>
}

Warehouse "0..N" -- "1" Location : located at >
Admin "1" -- "0..N" Manages : performs >
Manages "0..N" -- "1" Warehouse : targets >

note on link
  Each warehouse is managed
  by exactly one admin
end note

' ─────────────────────────────────────────────
' CARGO & INVENTORY
' ─────────────────────────────────────────────

class CargoItem {
  + cargo_id : BIGSERIAL <<PK>>
  + cargo_type : TEXT
  + weight : NUMERIC(12,2)
}

class InventoryRecord {
  + cargo_id : BIGINT <<PK, FK>>
  + warehouse_id : BIGINT <<PK, FK>>
  + quantity_stored : INTEGER
  + last_updated : TIMESTAMPTZ
}

note right of InventoryRecord
  Weak entity — uniquely identified
  by (warehouse_id, cargo_id).
  quantity_stored must be >= 0.
end note

Warehouse "1" -- "0..N" InventoryRecord : stores >
CargoItem "1" -- "0..1" InventoryRecord : tracked by >

' ─────────────────────────────────────────────
' CARRIER & ROUTE
' ─────────────────────────────────────────────

class Carrier {
  + carrier_id : BIGSERIAL <<PK>>
  + name : TEXT
  + carrier_type : TEXT
}

class Route {
  + route_id : BIGSERIAL <<PK>>
  + estimated_time : INTEGER
}

' ─────────────────────────────────────────────
' SHIPMENT
' ─────────────────────────────────────────────

class Shipment {
  + shipment_id : BIGSERIAL <<PK>>
  + shipment_date : DATE
  + status : TEXT
  + carrier_id : BIGINT <<FK>>
  + route_id : BIGINT <<FK>>
  + origin_loc_id : BIGINT <<FK>>
  + destination_loc_id : BIGINT <<FK>>
}

note right of Shipment
  status values:
  PENDING | IN_TRANSIT | DELIVERED
end note

Carrier "1" -- "0..N" Shipment : handles >
Route "1" -- "0..N" Shipment : uses >
Location "1" -- "0..N" Shipment : origin of >
Location "1" -- "0..N" Shipment : destination of >

' ─────────────────────────────────────────────
' CONTAINER & CONTAINER_CARGO
' ─────────────────────────────────────────────

class Container {
  + container_id : BIGSERIAL <<PK>>
  + container_type : TEXT
  + max_capacity : NUMERIC(12,2)
  + shipment_id : BIGINT <<FK, nullable>>
}

class ContainerCargo {
  + cargo_id : BIGINT <<PK, FK>>
  + container_id : BIGINT <<PK, FK>>
}

note bottom of ContainerCargo
  Associative table for the
  many-to-many relationship between
  CargoItem and Container.
end note

Shipment "1" -- "0..N" Container : assigned to >
Container "1" -- "0..N" ContainerCargo : contains >
CargoItem "1" -- "0..N" ContainerCargo : loaded in >

' ─────────────────────────────────────────────
' AUDIT LOG
' ─────────────────────────────────────────────

class AuditLog {
  + id : BIGSERIAL <<PK>>
  + user_id : BIGINT <<nullable>>
  + action_type : TEXT
  + entity_type : TEXT
  + entity_id : BIGINT <<nullable>>
  + payload : JSONB
  + created_at : TIMESTAMPTZ
}

note bottom of AuditLog
  Populated by:
  - fn_audit_log() stored procedure
  - trg_inventory_records_audit trigger
  action_type: INSERT | UPDATE | INVENTORY_ADJUST
end note

User "0..1" ..> AuditLog : logged via >

' ─────────────────────────────────────────────
' STORED FUNCTIONS & TRIGGERS (stereotyped)
' ─────────────────────────────────────────────

class "fn_update_inventory()" <<function>> {
  + p_cargo_id : BIGINT
  + p_warehouse_id : BIGINT
  + p_delta_quantity : INTEGER
  + p_staff_user_id : BIGINT
  --
  Upserts inventory_records.
  Raises exception if qty < 0.
  Calls fn_audit_log().
}

class "trg_inventory_records_audit" <<trigger>> {
  AFTER INSERT OR UPDATE
  ON inventory_records
  --
  Calls fn_audit_log() with
  NULL user_id on every
  direct row change.
}

InventoryRecord ..> "fn_update_inventory()" : managed by >
InventoryRecord ..> "trg_inventory_records_audit" : fires >
"fn_update_inventory()" ..> AuditLog : writes >
"trg_inventory_records_audit" ..> AuditLog : writes >

' ─────────────────────────────────────────────
' VIEWS (stereotyped)
' ─────────────────────────────────────────────

class "view_shipment_summary" <<view>> {
  shipment_id
  status
  shipment_date
  carrier_name
  route_id
  origin_loc_id
  destination_loc_id
  container_count
  cargo_item_count
}

class "view_warehouse_inventory" <<view>> {
  warehouse_id
  warehouse_name
  total_units
  total_weight
}

Shipment ..> "view_shipment_summary" : source >
Container ..> "view_shipment_summary" : source >
ContainerCargo ..> "view_shipment_summary" : source >

Warehouse ..> "view_warehouse_inventory" : source >
InventoryRecord ..> "view_warehouse_inventory" : source >
CargoItem ..> "view_warehouse_inventory" : source >

@enduml
